--- a/LibraryDB.csproj
+++ b/LibraryDB.csproj
@@ -70,6 +70,12 @@
     <Compile Include="FormStudent.Designer.cs">
       <DependentUpon>FormStudent.cs</DependentUpon>
     </Compile>
+    <Compile Include="FromQueries.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FromQueries.Designer.cs">
+      <DependentUpon>FromQueries.cs</DependentUpon>
+    </Compile>
     <Compile Include="LibraryDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -88,6 +94,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormStudent.resx">
       <DependentUpon>FormStudent.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FromQueries.resx">
+      <DependentUpon>FromQueries.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
