--- a/App.config
+++ b/App.config
@@ -3,11 +3,14 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="LibraryDB.Properties.Settings.LibraryConnectionString"
+        <!--<add name="LibraryDB.Properties.Settings.LibraryConnectionString"
+            connectionString="Data Source=DESKTOP-7U0PGQS;Initial Catalog=Library;User Id=Alex; Password=q1w2e3r4;"
+            providerName="System.Data.SqlClient" />-->
+      <add name="LibraryDB.Properties.Settings.LibraryConnectionString"
             connectionString="Data Source=DESKTOP-7U0PGQS;Initial Catalog=Library;Integrated Security=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
+    <startup useLegacyV2RuntimeActivationPolicy="true"> 
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
     </startup>
 </configuration>
